sampler/chain/projects/retrofit/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/retrofit/retrofit/src/main/java/retrofit2/RequestFactory.java:829: error: [NullAway] (INDEX= 9) (Covered) passing @Nullable parameter 'relativeUrl' where @NonNull is required
        throw parameterError(method, p, "URL \"%s\" does not contain \"{%s}\".", relativeUrl, name);
                                                                                 ^

	(see http://t.uber.com/nullaway )
/Users/nima/Developer/NullAwayFixer/Projects/retrofit/retrofit/src/main/java/retrofit2/RequestFactory.java:410: error: [NullAway] (INDEX= 13) (Covered) passing @Nullable parameter 'httpMethod' where @NonNull is required
              method, p, "@Path can only be used with relative url on @%s", httpMethod);
                                                                            ^

	(see http://t.uber.com/nullaway )
/Users/nima/Developer/NullAwayFixer/Projects/retrofit/retrofit/src/main/java/retrofit2/RequestFactory.java:92: error: [NullAway] (INDEX= 11) (Covered) assigning @Nullable expression to @NonNull field
    parameterHandlers = builder.parameterHandlers;
                      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/retrofit/retrofit/src/main/java/retrofit2/OkHttpCall.java:287: error: [NullAway] (INDEX= 2) (Covered) returning @Nullable expression from method with @NonNull return type
      return contentType;
      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/retrofit/retrofit/src/main/java/retrofit2/RequestFactory.java:829: error: [NullAway] (INDEX= 9) (Covered) passing @Nullable parameter 'relativeUrl' where @NonNull is required
        throw parameterError(method, p, "URL \"%s\" does not contain \"{%s}\".", relativeUrl, name);
                                                                                 ^

	(see http://t.uber.com/nullaway )
